--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -33,10 +33,11 @@ test:
 
 about:
   home: http://potatobreeding.cals.wisc.edu/software
-  license: GPL-3
+  license: GPL-3.0-only
   summary: Software for genomic prediction with the RR-BLUP mixed model (Endelman 2011, <doi:10.3835/plantgenome2011.08.0024>). One application is to estimate marker effects by ridge regression; alternatively, BLUPs can be calculated based on an additive relationship matrix or a Gaussian kernel.
   license_family: GPL3
-  license_file: {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
+  license_file:
+    - {{ environ["PREFIX"] }}/lib/R/share/licenses/GPL-3
 
 extra:
   recipe-maintainers:
